Adjusts for CRUD
